--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation('ch.qos.logback:logback-classic:1.4.5')
     implementation('org.postgresql:postgresql:42.5.1')
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.diogonunes:JColor:5.5.1'
+
+
 }
 
 test {
