--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,19 @@
 plugins {
-    id 'application'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'java'
 }
 
 group 'com.lindgrei'
 version '1.0-SNAPSHOT'
 
-mainClassName = 'com.lindgrei.Main'
-
-version '1.0'
-
-
-sourceCompatibility = targetCompatibility = 1.8
-
-
 repositories {
-    jcenter()
     mavenCentral()
-    maven { // on kotlin dsl use `maven("https://m2.dv8tion.net/releases")` instead
-        url "https://m2.dv8tion.net/releases"
-    }
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-    implementation("net.dv8tion:JDA:5.0.0-beta.2")
-    implementation('ch.qos.logback:logback-classic:1.4.5')
-    implementation('org.postgresql:postgresql:42.5.1')
-    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
-    implementation 'com.diogonunes:JColor:5.5.1'
-
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
     useJUnitPlatform()
 }
-compileJava.options.encoding = 'UTF-8'
